fix bug in sentence words language selection; align words vertically in floating cards;

--- a/style.css
+++ b/style.css
@@ -457,7 +457,9 @@ body {
 }
 
 .sent-word {
-    display: inline-block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     user-select: none;
     background: var(--primary-background);
     border: 2px solid var(--light-border-color);
